# DeepResearchAssitant

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
backend/: app.py  db.py
backend/models/: schemas.py
backend/routers/: chat.py  history.py  users.py
backend/services/: background_worker.py
config/: model_config.yaml  prompt_templates.yaml
frontend/: app.py
src/agent_interface/: schemas.py  states.py  tools.py
src/agents/: research_agent.py  scope_agent.py  supervisor_agent.py  workflow_executor.py
src/data_retriever/: output_retriever.py
src/llm/: gemini_client.py
src/prompt_engineering/: templates.py
src/utils/: tools.py
