[project]
name = "pythonproject"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=1.1.3",
    "langchain-chroma>=1.1.0",
    "langchain-core>=1.2.0",
    "langchain-google-genai>=4.0.0",
    "langchain-text-splitters>=1.1.0",
    "langgraph>=1.0.5",
    "streamlit>=1.52.1",
    "tavily>=1.1.0",
]
