[project]
name = "pythonproject"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.22.0",
    "asyncpg>=0.31.0",
    "dotenv>=0.9.9",
    "fastapi>=0.127.0",
    "fastapi-users[sqlalchemy]>=15.0.3",
    "langchain>=1.1.3",
    "langchain-chroma>=1.1.0",
    "langchain-core>=1.2.0",
    "langchain-deepseek>=1.0.1",
    "langchain-google-genai>=4.0.0",
    "langchain-openai>=1.1.3",
    "langchain-text-splitters>=1.1.0",
    "langfuse>=3.10.7",
    "langgraph>=1.0.5",
    "langgraph-checkpoint-postgres>=3.0.2",
    "psycopg[binary,pool]>=3.3.2",
    "sqlalchemy>=2.0.45",
    "streamlit>=1.52.1",
    "tavily>=1.1.0",
    "uvicorn[standard]>=0.38.0",
]
